<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/smk24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/pp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/exitbtn"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/exit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.181" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="81dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bio"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="196dp"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginStart="8dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/abut"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/info" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/attach" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/message" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/galery" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/video" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/section1"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
<!--       tools:visibility="gone"     -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="calculatorapp"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/calculator" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/flash" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item2"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/camera" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item3"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/flag" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item4"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/privacy" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="8dp"
                    android:text="@string/item5"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="425dp"
        android:layout_height="150dp"
        android:background="#2B2D30"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/fitur1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/about"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur5"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur9"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/fitur2"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tlp"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur6"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur10"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/fitur3"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur7"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur11"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/fitur4"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur8"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/fitur12"
                android:textColor="@android:color/darker_gray" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/beforefooter"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>